# freespace_polygons

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/freespace/include/Freespace/: Freespace.h  OccupancyMap.h
src/freespace/src/: CMakeLists.txt  Freespace.cpp  Freespace.h  FreespaceGenerator.cpp  FreespaceGenerator.h  Geometry.cpp  Geometry.h  OccupancyMap.cpp  OccupancyMap.h  Polygon.cpp  Polygon.h  PolygonClipper.cpp  PolygonClipper.h  Ring.cpp  Ring.h  RingGenerator.cpp  RingGenerator.h
src/freespace/tests/: CMakeLists.txt  FreespaceGeneratorTest.cpp  FreespaceTest.cpp  OccupancyMapTest.cpp  PolygonClipperTest.cpp  PolygonTest.cpp  RingGeneratorTest.cpp  RingTest.cpp
src/polygons/include/Polygons/: FreespaceGenerator.h  Polygon.h  PolygonClipper.h  Ring.h  RingGenerator.h
src/polygons/src/: CMakeLists.txt  Freespace.cpp  Freespace.h  FreespaceGenerator.cpp  FreespaceGenerator.h  Geometry.cpp  Geometry.h  Polygon.cpp  Polygon.h  PolygonClipper.cpp  PolygonClipper.h  Ring.cpp  Ring.h  RingGenerator.cpp  RingGenerator.h
src/polygons/tests/: CMakeLists.txt  FreespaceGeneratorTest.cpp  FreespaceTest.cpp  PolygonClipperTest.cpp  PolygonTest.cpp  RingTest.cpp
src/types/include/Types/: OccupancyMap.h  Point.h  PoseSE2.h
src/types/src/: CMakeLists.txt  OccupancyMap.cpp  OccupancyMap.h  Point.cpp  Point.h  PoseSE2.cpp  PoseSE2.h
src/types/tests/: CMakeLists.txt  OccupancyMapTest.cpp
